tests/positive/BuiltinsBool.juvix
module BuiltinsBool;

builtin bool
type Bool :=
  | true : Bool
  | false : Bool;

builtin bool-if
ite : {A : Type} → Bool → A → A → A
  | true t _ := t
  | false _ e := e;
