tests/negative/Iterators5.juvix
module Iterators5;

syntax iterator map;

builtin bool
type Bool :=
  | true : Bool
  | false : Bool;

main : Bool := true;
